--- a/pokedex/src/app/pokedex/pokemon-detail/pokemon-about-tab/pokemon-about-tab.component.scss
+++ b/pokedex/src/app/pokedex/pokemon-detail/pokemon-about-tab/pokemon-about-tab.component.scss
@@ -49,7 +49,7 @@ $iconwater    : #539DDF;
   flex-direction: row;
 }
 
-.sectionRight
+.sectionLeft
 {
   display: flex;
   flex-direction: column;
@@ -118,28 +118,46 @@ p.bug{color: $white}p.dark{color: $black}p.dragon{color: $black}p.electric{color
   text-align: center;
 }
 
-.sectionLeft .content {
+.sectionRight .content {
   border-bottom: 2px solid $darkGray;
   padding-bottom: 10px;
   margin-bottom: 10px;
 }
 
-.sectionLeft .content .type{
+.sectionRight .content.last {
+  border-bottom: none;
+}
+
+.sectionRight .content .contentBox{
   display: flex;
   flex-direction: row;
+  align-items: center;
 }
 
-.sectionLeft .content .type .typeIcon {
-    margin-right: 5px;
-    border-radius: 100%;
-    height: 20px;
-    width: 20px;
+.sectionRight .content .contentBox p{
+  margin: 3px 3px;
 }
 
-.sectionLeft .content .type .typeIcon img {
-    height: 60%;
-    width: 60%;
-    margin: 20%;
+.sectionRight .content .contentBox .typeIcon {
+  margin-right: 5px;
+  border-radius: 100%;
+  height: 20px;
+  width: 20px;
 }
+
+.sectionRight .content .contentBox .typeIcon img {
+  height: 60%;
+  width: 60%;
+  margin: 20%;
+}
+
+.sectionRight .content img {
+  height: 20px;
+  width: 20px;
+  margin: 5px;
+}
+
+.weightImg.bug{filter: invert(100%);}.weightImg.electric{filter: invert(100%);}.weightImg.fairy{filter: invert(100%);}.weightImg.fighting{filter: invert(100%);}.weightImg.fire{filter: invert(100%);}.weightImg.flying{filter: invert(100%);}.weightImg.grass{filter: invert(100%);}.weightImg.ground{filter: invert(100%);}.weightImg.ice{filter: invert(100%);}.weightImg.normal{filter: invert(100%);}.weightImg.psychic{filter: invert(100%);}.weightImg.rock{filter: invert(100%);}.weightImg.water{filter: invert(100%);}
+.heightImg.bug{filter: invert(100%);}.heightImg.electric{filter: invert(100%);}.heightImg.fairy{filter: invert(100%);}.heightImg.fighting{filter: invert(100%);}.heightImg.fire{filter: invert(100%);}.heightImg.flying{filter: invert(100%);}.heightImg.grass{filter: invert(100%);}.heightImg.ground{filter: invert(100%);}.heightImg.ice{filter: invert(100%);}.heightImg.normal{filter: invert(100%);}.heightImg.psychic{filter: invert(100%);}.heightImg.rock{filter: invert(100%);}.heightImg.water{filter: invert(100%);}
 
 .typeIcon.bug{background: $iconbug; box-shadow: 0 0 5px $iconbug;}.typeIcon.dark{background: $icondark; box-shadow: 0 0 5px $icondark;}.typeIcon.dragon{background: $icondragon; box-shadow: 0 0 5px $icondragon;}.typeIcon.electric{background: $iconelectric; box-shadow: 0 0 5px $iconelectric;}.typeIcon.fairy{background: $iconfairy; box-shadow: 0 0 5px $iconfairy;}.typeIcon.fighting{background: $iconfighting; box-shadow: 0 0 5px $iconfighting;}.typeIcon.fire{background: $iconfire; box-shadow: 0 0 5px $iconfire;}.typeIcon.flying{background: $iconflying; box-shadow: 0 0 5px $iconflying;}.typeIcon.ghost{background: $iconghost; box-shadow: 0 0 5px  $iconghost;}.typeIcon.grass{background: $icongrass; box-shadow: 0 0 5px  $icongrass;}.typeIcon.ground{background: $iconground; box-shadow: 0 0 5px $iconground;}.typeIcon.ice{background: $iconice; box-shadow: 0 0 5px $iconice;}.typeIcon.normal{background: $iconnormal; box-shadow: 0 0 5px $iconnormal;}.typeIcon.poison{background: $iconpoison; box-shadow: 0 0 5px $iconpoison;}.typeIcon.psychic{background: $iconpsychic; box-shadow: 0 0 5px $iconpsychic;}.typeIcon.rock{background: $iconrock; box-shadow: 0 0 5px $iconrock;}.typeIcon.steel{background: $iconsteel; box-shadow: 0 0 5px $iconsteel;}.typeIcon.water{background: $iconwater;  box-shadow: 0 0 5px $iconwater;}
